[tool.poetry]
name = "project-oop"
version = "0.1.0"
description = ""
authors = ["Данил <68993829+danilka007tuk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.15.0"
isort = "^6.0.0"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
requests = "^2.32.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
